--- a/QtGuiApplication1/QtGuiApplication1.ui
+++ b/QtGuiApplication1/QtGuiApplication1.ui
@@ -2,13 +2,11 @@
 <ui version="4.0">
  <class>QtGuiApplication1Class</class>
  <widget class="QMainWindow" name="QtGuiApplication1Class">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
+  <property name="minimumSize">
+   <size>
     <width>600</width>
     <height>400</height>
-   </rect>
+   </size>
   </property>
   <property name="windowTitle">
    <string>QtGuiApplication1</string>
@@ -92,7 +90,7 @@
       <x>80</x>
       <y>220</y>
       <width>421</width>
-      <height>131</height>
+      <height>151</height>
      </rect>
     </property>
    </widget>
@@ -100,7 +98,7 @@
     <property name="geometry">
      <rect>
       <x>510</x>
-      <y>330</y>
+      <y>350</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -135,14 +133,6 @@
      <string>Result</string>
     </property>
    </widget>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
